--- a/pom.xml
+++ b/pom.xml
@@ -214,8 +214,7 @@
   </scm>
 
   <prerequisites>
-   <maven.compiler.source>1.8</maven.compiler.source> 
-<maven.compiler.target>1.8</maven.compiler.target>
+    <maven>3.0.3</maven>
   </prerequisites>
 
 </project>
