--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
 
   <build>
     <plugins>
-      
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
@@ -208,6 +214,7 @@
   </scm>
 
   <prerequisites>
+  <java.version>11</java.version> 
     <maven>3.0.3</maven>
   </prerequisites>
 
