--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+    <maven.compiler.source>11</maven.compiler.source> 
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <modules>
@@ -214,8 +216,7 @@
   </scm>
 
   <prerequisites>
-    <maven.compiler.source>11</maven.compiler.source> 
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven>3.0.3</maven>
   </prerequisites>
 
 </project>
